# pearl_house_code

./: CMakeLists.txt  README.md  autobuild.sh
document/book/: 1.1gcc+gdb.md  1.2brpc.md  perface.md
document/memorandum/: a copy.iuml  a.iuml  a.md  debug_experience.md  others.md  project_experience.md  shell_cmd.md
kernel/base_algorithm/: CMakeLists.txt
kernel/base_algorithm/example/: CMakeLists.txt
kernel/base_algorithm/example/caller/: CMakeLists.txt  caller.cpp
kernel/base_algorithm/include/: my_algorithm.hpp
kernel/base_algorithm/src/: CMakeLists.txt  my_algorithm.cpp
kernel/common_tools/: redis.py
